# ComfyUI-InferenceTimeScaling

./: LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-pipeline.yml
src/inferencescale/: nodes.py  qwen_verifier.py  utils.py
tests/: __init__.py  test_inferencescale.py
workflows/: flux_example.json  sdxl_example.json
