[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ComfyUI-InferenceTimeScaling"
version = "0.0.3"
description = "Inference-time techniques to enhance diffusion-based image generation quality through random search and zero-order optimization algorithms"
authors = [
  {name = "Max Clouser", email = "max@yrikka.com"}
]
readme = "README.md"
license = {text = "MIT license"}
classifiers = []
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers==4.49.0",
    "pillow==11.1.0",
    "numpy>=1.24.0",
    "huggingface_hub==0.27.1",
    "timm==0.6.13",
    "fairscale>=0.4.0",
    "image_reward==1.5",
    "pydantic==2.10.6",
    "outlines==0.2.0",
    "open-clip-torch>=2.20.0",
    "clip @ git+https://github.com/openai/CLIP.git"
]

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
bugs = "https://github.com/YRIKKA/ComfyUI-InferenceTimeScaling/issues"
homepage = "https://github.com/YRIKKA/ComfyUI-InferenceTimeScaling"


[tool.comfy]
PublisherId = "maximclouser"
DisplayName = "ComfyUI-InferenceTimeScaling"
Icon = ""

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
